--- a/src/style/4-pages/responsive.scss
+++ b/src/style/4-pages/responsive.scss
@@ -2442,6 +2442,7 @@ $m-margin-big : 20px;
             align-items: center;
             padding-right: $dCol;
             padding-top: 10px;
+            padding-bottom: 18px !important;
             margin-left: 50%;
             width: 50%;
 
