--- a/src/style/4-pages/archive-explorations.scss
+++ b/src/style/4-pages/archive-explorations.scss
@@ -153,7 +153,7 @@
     .titleExplo {
         @include p-intro-bold;
         color: $grey-col;
-        width: 60%;
+        width: 50%;
         margin-right: $dCol;
     }
 
@@ -200,6 +200,15 @@
         padding-top: 25px;
 
         button {
+            @include small-button;
+            color: $grey-col-50;
+        }
+        span {
+            @include small-button;
+            color: $grey-col-50;
+        }
+
+        a {
             @include small-button;
             color: $grey-col-50;
         }
