--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -21,6 +21,7 @@
 @import "./3-components/01-header/sidebar.scss";
 @import "./3-components/01-header/intro.scss";
 @import "./3-components/01-header/search.scss";
+@import "./3-components/01-header/cookies.scss";
 
 
     // 02-loops
