--- a/src/style/4-pages/more.scss
+++ b/src/style/4-pages/more.scss
@@ -76,8 +76,8 @@ form#searchform div input::placeholder {
       display: none;
     }
     position: absolute;
-    height: 100%;
-    width: 400px;
+      height: 100%;
+      width: 40px;
       z-index: 9;
       background: none;
   }
@@ -87,14 +87,39 @@ form#searchform div input::placeholder {
       display: none;
     }
     content: url("/wp-content/themes/lieuxfauves/src/assets/img/LF_slide_picto-next-02_gauche.svg");
+    margin-top: 10px;
+    margin-left: 9px;
     position: absolute;
     left: 18px;
     width: 25px;
     height: 25px;
     color: #fff;
+    z-index: 2;
     
    
 }
+
+
+
+.slick-prev::after {
+  @include mobile-tab {
+    display: none;
+  }
+  background-color: #00534e;
+  content: "";
+
+ 
+  position: absolute;
+  z-index: 1;
+  left: 18px;
+  width: 45px;
+  height: 45px;
+  color: #fff;
+  
+ 
+}
+
+
   .slick-next{
 
     @include mobile-tab {
@@ -103,12 +128,11 @@ form#searchform div input::placeholder {
       top: 0;
       position: absolute;
       height: 100%;
-      width: 400px;
+      width: 1px;
       right: 0;
       z-index: 9;
       background: none;
-
-    
+     
   }
   
   
@@ -122,8 +146,33 @@ form#searchform div input::placeholder {
     width: 25px;
     height: 25px;
     color: #fff;
+    z-index: 2;
+    margin-top: 10px;
+    margin-right: 9px;
     
   }
+
+
+  .slick-next::after {
+    @include mobile-tab {
+      display: none;
+    }
+    background-color: #00534e;
+    content: "";
+  
+   
+    position: absolute;
+    z-index: 1;
+    right: 18px;
+    width: 45px;
+    height: 45px;
+    color: #fff;
+    
+   
+  }
+
+
+
 
 
 
@@ -321,13 +370,46 @@ form#searchform div button{
       display: none;
     }
 
-
       position: absolute;
       z-index: inherit;
-      right: 22px;
+      right: 19px;
       top: 60%;
       cursor: pointer;
+      background-color: #00534e;
+      height: 45px;
+      width: 45px;
   }
+
+  .logoZoom {
+    height: 22px !important;
+    width : auto !important;
+    cursor: pointer;
+    z-index: 1;
+    margin: 10px;
+  }
+
+
+/* 
+  .zoom-image::after {
+    @include mobile-tab {
+      display: none;
+    }
+    background-color: #00534e;
+    content: "";
+  
+   
+    position: absolute;
+    z-index: 2;
+    right: 0px;
+    width: 45px;
+    height: 45px;
+    color: #fff;
+
+    
+    
+  
+  }
+   */
   
   .galleryWrapper .single-slide-image .zoom-image i{
       color:#fff;
@@ -346,7 +428,7 @@ form#searchform div button{
   }
   
   .zoom-image-slider img{
-    
+  
       width: 100%;
       height: 100%;
       object-fit: cover;
