--- a/src/style/4-pages/responsive.scss
+++ b/src/style/4-pages/responsive.scss
@@ -69,6 +69,8 @@ $m-margin-big : 20px;
         }
     }
 
+
+
 }
 
 @include laptopS {
@@ -988,7 +990,8 @@ $m-margin-big : 20px;
 
 
     .navNextPrev {
-        position: fixed;
+        position: absolute;
+     
         z-index: 50;
         display: flex;
         right: 0;
@@ -998,26 +1001,24 @@ $m-margin-big : 20px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
         width: 65px;
         height: 2 * $margin;
 
 
         .nav-previousMobile {
             display: block;
+           
         }
 
         .nav-nextMobile {
             display: block;
+           
         }
 
         .close-icon {
             height: 22px;
             width: 22px;
         }
-
-
-
 
         .nav-previous {
             display: none
