--- a/src/style/4-pages/archive-projets.scss
+++ b/src/style/4-pages/archive-projets.scss
@@ -235,7 +235,7 @@
         opacity: 0.5;
         //text-decoration: line-through;
         pointer-events: none;
-        background: #f1dcad;
+        //background: #f1dcad;
     }
 }
 
