last graphic modif

--- a/src/style/4-pages/archive-projets.scss
+++ b/src/style/4-pages/archive-projets.scss
@@ -230,6 +230,7 @@
     }
     .catName.active {
         @include fauveUnderlineSmallHover;
+        color : $jungle-col;
     }
     .subCatName > .unclickable {
         opacity: 0.5;
