--- a/src/style/4-pages/single-exploration.scss
+++ b/src/style/4-pages/single-exploration.scss
@@ -178,6 +178,11 @@
             @include p-very-small;
             color: $grey-col;
 
+            a {
+            @include p-bold;
+            color: $grey-col;
+            }
+
         }
 
 
