--- a/src/style/4-pages/page-agence.scss
+++ b/src/style/4-pages/page-agence.scss
@@ -16,6 +16,10 @@
 
     .slick-track {
         height: 600px;
+        @include mobile-tab {
+            height: fit-content;
+            
+        }
     }
 
 
