--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -27,6 +27,9 @@
     // 02-loops
     @import "./3-components/02-loops.scss";
     @import "./3-components/03-categories-projets.scss";
+
+    // 04-cookies
+    @import "./3-components/04-cookies.scss";
     // 07-footer
 @import "./3-components/07-footer/footer.scss";
 
