--- a/src/style/3-components/04-cookies.scss
+++ b/src/style/3-components/04-cookies.scss
@@ -5,7 +5,9 @@
     @include laptopS{
         width: calc(100% - 77px);
     }
-    background-color: white;
+    background-color: $jungle-col;
+    color : $jungle-col-10;
+    opacity: 0.7;
     z-index: 100;
     padding: 30px 77px;
     display: grid;
@@ -29,7 +31,22 @@
             line-height: 20px;
         }
     }
+
+    button:before {
+        content: url('/wp-content/themes/lieuxfauves/src/assets/img/lf_mobile-picto_valider.svg');
+        display: block;
+        height : 25px;
+        width: 25px;
+        text-align: center;
+
+      
+    }
     button{
+  
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         margin: 15px auto;
         @include tablet{
             grid-column: 2; 
