--- a/src/style/4-pages/archive-explorations.scss
+++ b/src/style/4-pages/archive-explorations.scss
@@ -118,6 +118,7 @@
                     @include fauveUnderlineSmall;
                     margin-bottom: 5px;
                     font-family: "Fira Medium";
+                    display: none;
                     
     
                 }
@@ -132,6 +133,7 @@
                     text-decoration: none;
                     color : $grey-col;
                     font-family: "Fira Light";
+                    display: none;
                   
                 }
              
