--- a/src/style/4-pages/single-exploration.scss
+++ b/src/style/4-pages/single-exploration.scss
@@ -40,6 +40,7 @@
         padding-right: $dCol;
 
         .tagsWrapperExploration {
+            display: none;
             //min-height: 180px;
             background-color: white;
             padding: $dCol;
