--- a/src/style/4-pages/responsive.scss
+++ b/src/style/4-pages/responsive.scss
@@ -449,6 +449,7 @@ $m-margin-big : 20px;
             flex-wrap: wrap;
             gap: $dCol;
             margin-right: -45px;
+            margin-top : 130px;
 
 
             .cardProjet {
@@ -1464,6 +1465,7 @@ $m-margin-big : 20px;
                         padding-right: 0;
                         padding-left: 0;
                         box-shadow: inset 0 0 0;
+                        display: none;
 
 
                     }
