--- a/src/style/4-pages/page-agence.scss
+++ b/src/style/4-pages/page-agence.scss
@@ -171,8 +171,13 @@
     color: $grey-col;
 
 
-
     b {
+        @include p-bold;
+        color: $grey-col;
+
+    }
+
+    strong {
         @include p-bold;
         color: $grey-col;
 
@@ -199,6 +204,11 @@
         color: $grey-col;
 
     }
+    strong {
+        @include p-bold;
+        color: $grey-col;
+
+    }
 
 }
 
@@ -210,6 +220,12 @@
 
 
 .contentAgenceBold {
+
+    strong {
+
+    @include p-bold;
+    color: $grey-col;
+    }
     p {
         @include p-intro-bold-lh;
         color: $grey-col;
@@ -375,6 +391,10 @@
 }
 
 .rejoindreWrapper {
+
+    .titleAgence {
+        padding-bottom: 45px;
+    }
     background-color: $jungle-col;
     padding: $m-margin-small;
 
