--- a/src/style/4-pages/single-projets.scss
+++ b/src/style/4-pages/single-projets.scss
@@ -258,6 +258,11 @@
 
         .rightColumn {
 
+            b {
+                @include p-bold;
+
+            }
+
             strong {
                 @include p-bold;
 
