--- a/src/style/3-components/02-loops.scss
+++ b/src/style/3-components/02-loops.scss
@@ -106,7 +106,7 @@
                 justify-content: center;
                 align-items: center;
                 object-fit: cover;
-                opacity: 0.5;
+                //opacity: 0.5;
             }
         }
 
@@ -114,7 +114,6 @@
             content: '';
             width: 100%;
             height: 360px;
-            background-color: $jungle-col;
             display: block;
             padding-bottom: 100%;
             
