--- a/src/style/4-pages/front-page.scss
+++ b/src/style/4-pages/front-page.scss
@@ -13,6 +13,7 @@
 
     @include laptopS {
     padding-left:  6 * $dCol;
+    padding-right: $dCol;
 }
     padding-right: 18px;
     padding-left: 18px;
@@ -352,7 +353,7 @@
                     justify-content: center;
                     align-items: center;
                     object-fit: cover;
-                    opacity: 0.5;
+                    //opacity: 0.5;
                  
 
                 }
@@ -360,7 +361,7 @@
 
             .article-thumbnail::after {
                 content: '';
-                background-color: $jungle-col;
+                
                 display: block;
                 padding-bottom: 100%;
               
