--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -30,6 +30,8 @@
 
     // 04-cookies
     @import "./3-components/04-cookies.scss";
+    // 05-share publication
+    @import "./3-components/05-share-publication.scss";
     // 07-footer
 @import "./3-components/07-footer/footer.scss";
 
