--- a/src/style/3-components/05-share-publication.scss
+++ b/src/style/3-components/05-share-publication.scss
@@ -4,6 +4,7 @@
     padding-top: 4%;
     padding-bottom: 4%;
     margin-bottom: 2%;
+    color : $grey-col-50;
     a{
         font-family: "Fira Bold", Arial, Helvetica, sans-serif;
         font-size: 11px;
