--- a/src/style/4-pages/archive-explorations.scss
+++ b/src/style/4-pages/archive-explorations.scss
@@ -210,6 +210,7 @@
             color: $grey-col-50;
         }
         span {
+            display: flex;
             @include small-button;
             color: $grey-col-50;
         }
