--- a/src/style/4-pages/front-page.scss
+++ b/src/style/4-pages/front-page.scss
@@ -400,7 +400,8 @@
         height: 400px;
 
         @include laptopS {
-        display: flex;}
+        display: flex;
+    gap : 6px}
 
         @include mobile-tab {
             display: grid;
