--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -32,6 +32,9 @@
     @import "./3-components/04-cookies.scss";
     // 05-share publication
     @import "./3-components/05-share-publication.scss";
+        // 06-Oembed
+        @import "./3-components/06-oembed.scss";
+
     // 07-footer
 @import "./3-components/07-footer/footer.scss";
 
