--- a/src/style/4-pages/more.scss
+++ b/src/style/4-pages/more.scss
@@ -73,7 +73,7 @@ form#searchform div input::placeholder {
   
   .slick-prev{
     @include mobile-tab {
-      display: none;
+      //display: none;
     }
     position: absolute;
       height: 100%;
@@ -84,7 +84,7 @@ form#searchform div input::placeholder {
 
   .slick-prev:before {
     @include mobile-tab {
-      display: none;
+      //display: none;
     }
     content: url("/wp-content/themes/lieuxfauves/src/assets/img/lf_slide_picto-next-02_gauche.svg");
     margin-top: 10px;
@@ -123,7 +123,7 @@ form#searchform div input::placeholder {
   .slick-next{
 
     @include mobile-tab {
-      display: none;
+      //display: none;
     }
       top: 0;
       position: absolute;
@@ -138,7 +138,7 @@ form#searchform div input::placeholder {
   
   .slick-next:before {
     @include mobile-tab {
-      display: none;
+      //display: none;
     }
     content: url("/wp-content/themes/lieuxfauves/src/assets/img/lf_slide_picto-next-01_droite.svg");
     position: absolute;
@@ -383,8 +383,20 @@ form#searchform div button{
   .galleryWrapper .single-slide-image .zoom-image{
 
     @include mobile-tab {
-      display: none;
+      content:"";
+      //display: none;
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      right: 0;
+      top: 0;
+      background-color: transparent;
+
+      img {
+        display: none;
+      }
     }
+
 
       position: absolute;
       z-index: inherit;
@@ -396,12 +408,15 @@ form#searchform div button{
       width: 45px;
   }
 
+  
+
   .logoZoom {
     height: 22px !important;
     width : auto !important;
     cursor: pointer;
     z-index: 1;
     margin: 10px;
+    
   }
 
 
@@ -444,6 +459,7 @@ form#searchform div button{
   }
   
   .zoom-image-slider img{
+    
   
       width: 100%;
       height: 100%;
