--- a/src/style/4-pages/page-agence.scss
+++ b/src/style/4-pages/page-agence.scss
@@ -3,14 +3,11 @@
  .galleryWrapperAgence {
     @include mobile-tab {
      img {
-    height: 100%;
+    height : auto;
     width: 100%;
      }
     }
 
-    img {
-        height: fit-content;
-         }
     display: none;
     
     margin-bottom: 15px;
@@ -174,7 +171,7 @@
     width: 45%;
 
 
-    @include footer-legend;
+    @include footer-legend-2;
     color: $grey-col;
 
 
